[gd_scene load_steps=4 format=3 uid="uid://bn4ysq0gnht1x"]

[ext_resource type="Script" path="res://Scripts/menu/setting/video.gd" id="1_w1ufn"]
[ext_resource type="Texture2D" uid="uid://dah8g1njilnah" path="res://Textures/Image/OIG-351x351-upscaled.png" id="2_5woid"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5rxos"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1ufn")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -395.0
offset_right = 158.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5woid")

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.504
anchor_top = 0.407
anchor_right = 0.504
anchor_bottom = 0.407
offset_left = -137.608
offset_top = -26.736
offset_right = 137.392
offset_bottom = 27.264

[node name="Graphisme" type="Button" parent="Options"]
layout_mode = 0
offset_left = -2.0
offset_right = 114.0
offset_bottom = 53.0
text = "Graphisme"

[node name="Audio" type="Button" parent="Options"]
layout_mode = 0
offset_left = 158.0
offset_right = 274.0
offset_bottom = 53.0
text = "Audio"

[node name="Retour" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 136.0
grow_vertical = 0

[node name="Retour" type="Button" parent="Retour"]
layout_mode = 0
offset_top = 1.0
offset_right = 134.0
offset_bottom = 49.0
text = "Retour"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.144
anchor_top = 0.494
anchor_right = 0.886
anchor_bottom = 0.725
offset_left = -165.888
offset_top = -0.112
offset_right = 131.328
offset_bottom = 0.199982
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498)

[node name="Resolution" type="Label" parent="ColorRect"]
material = SubResource("CanvasItemMaterial_5rxos")
layout_mode = 0
offset_left = 5.0
offset_top = 23.0
offset_right = 117.0
offset_bottom = 46.0
text = "RÃ©solution :"

[node name="OptionButton" type="OptionButton" parent="ColorRect"]
layout_mode = 0
offset_left = 112.0
offset_top = 21.0
offset_right = 293.0
offset_bottom = 50.0

[node name="Affichage" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 78.0
offset_right = 147.0
offset_bottom = 101.0
text = "Mode d'affichage :"

[node name="OptionButton2" type="OptionButton" parent="ColorRect"]
layout_mode = 0
offset_left = 163.0
offset_top = 77.0
offset_right = 345.0
offset_bottom = 104.0

[node name="VSync_CheckBox" type="CheckBox" parent="ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 120.0
offset_right = 84.0
offset_bottom = 151.0
text = "VSync"

[node name="MSAA" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 505.0
offset_top = 23.0
offset_right = 570.0
offset_bottom = 46.0
text = "MSAA :"

[node name="OptionButton3" type="OptionButton" parent="ColorRect"]
layout_mode = 0
offset_left = 575.0
offset_top = 21.0
offset_right = 756.0
offset_bottom = 50.0

[connection signal="pressed" from="Options/Graphisme" to="." method="_on_graphisme_pressed"]
[connection signal="pressed" from="Options/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Retour/Retour" to="." method="_on_retour_pressed"]
[connection signal="item_selected" from="ColorRect/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="ColorRect/VSync_CheckBox" to="." method="_on_v_sync_check_box_toggled"]
[connection signal="item_selected" from="ColorRect/OptionButton3" to="." method="_on_option_button_3_item_selected"]
